@@ -226,6 +226,13 @@ void set_resc_assigned(
   else
     {
     assert(pjob->ji_qhdr->qu_qs.qu_type == QTYPE_Execution);
+    snprintf(log_buffer,sizeof(log_buffer),
+      "job %s isn't in an execution queue, can't modify resources\njob is in queue %s",
+      pjob->ji_qs.ji_jobid,
+      pjob->ji_qhdr->qu_qs.qu_name);
+    log_err(-1,id,log_buffer);
+
+    return;
     }
 
   if (op == INCR)
