@@ -2,6 +2,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
 
 2.4.8
   e - Bugzilla bug 22. HIGH_PRECISION_FAIRSHARE for fifo scheduling.
+  c - no longer sigabrt with "running" jobs not in an execution queue. log
+      an error. 
 
 2.4.7
   b - fixed a bug for when a resource_list has been set, but isn't completely
